[package]
name = "neon-demo"
version = "0.1.0"
authors = ["tragedyhk <alex99hk@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_demo"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
neon = "0.5.0"
num_cpus = "1.13.0"
sha2 = "0.9.1"

[profile.release]
opt-level = 3
