[package]
authors = ["tragedyhk <alex99hk@gmail.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "neon-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "neon_demo"

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
blake3 = "0.3.7"
neon = "0.5.0"
num_cpus = "1.13.0"
sha2 = "0.9.1"

[profile.release]
opt-level = 3
